# keystonedb

./: .dockerignore  .gitignore  ARCHITECTURE.md  BINDINGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.server  MONITORING.md  PERFORMANCE.md  README.md  RELEASE.md  RELEASING.md  TROUBLESHOOTING.md  docker-compose.yml  prometheus.yml
.github/workflows/: bindings-release.yml  bindings-test.yml  release.yml
bindings/: BUILD_STATUS.md  README.md
bindings/go/client/: README.md  builders.go  client.go  go.mod
bindings/go/embedded/: README.md  go.mod  keystone.go  smoke_test.go
bindings/javascript/client/: README.md  package-lock.json  package.json
bindings/javascript/client/src/: index.ts
bindings/javascript/embedded/: Cargo.toml  README.md  package-lock.json  package.json
bindings/javascript/embedded/src/: lib.rs
bindings/python/client/: README.md  pyproject.toml  setup.py
bindings/python/client/keystonedb/: __init__.py  builders.py  client.py
bindings/python/embedded/: Cargo.toml  README.md  pyproject.toml  test_smoke.py
bindings/python/embedded/src/: lib.rs
book/: README.md  SUMMARY.md
book/appendices/: appendix-d.md  appendix-e.md
book/part-01/: chapter-01.md
book/part-02/: chapter-06.md  chapter-07.md
book/part-03/: chapter-08.md  chapter-09.md
book/part-04/: chapter-12.md  chapter-17.md  chapter-18.md
book/part-05/: chapter-19.md  chapter-22.md  chapter-23.md
book/part-06/: chapter-24.md  chapter-25.md
book/part-07/: chapter-27.md  chapter-28.md
book/part-08/: chapter-30.md  chapter-31.md
book/part-09/: chapter-35.md
book/part-10/: chapter-38.md  chapter-39.md
c-ffi/: Cargo.toml  build.rs  cbindgen.toml
c-ffi/include/: keystone.h
c-ffi/src/: lib.rs
examples/: README.md
examples/blog-engine/: Cargo.toml  README.md
examples/blog-engine/src/: main.rs  models.rs
examples/blog-engine/src/handlers/: mod.rs  posts.rs  stats.rs  tags.rs
examples/cache-server/: Cargo.toml  README.md
examples/cache-server/src/: main.rs
examples/go-embedded/: README.md  go.mod  main.go
examples/grpc-client/: README.md
examples/grpc-client/go/: go.mod  main.go
examples/grpc-client/javascript/: package.json  tasks.js
examples/grpc-client/python/: tasks.py
examples/python-embedded/: README.md  contacts.py
examples/s3-backup/: Cargo.toml  README.md  main.rs
examples/todo-api/: Cargo.toml  README.md
examples/todo-api/src/: main.rs  models.rs
examples/url-shortener/: Cargo.toml  README.md
examples/url-shortener/src/: main.rs  models.rs
homebrew-formula/: README.md
homebrew-formula/Formula/: kstone-server.rb  kstone.rb
kstone-api/: Cargo.toml
kstone-api/src/: batch.rs  lib.rs  partiql.rs  query.rs  scan.rs  transaction.rs  update.rs
kstone-cli/: Cargo.toml
kstone-cli/src/: main.rs  shell.rs  table.rs
kstone-cli/src/notebook/: README.md  assets.rs  handlers.rs  mod.rs  server.rs  storage.rs  websocket.rs
kstone-cli/src/notebook/static/: index.html  notebook.js  styles.css
kstone-client/: Cargo.toml
kstone-client/src/: batch.rs  client.rs  error.rs  lib.rs  partiql.rs  query.rs  scan.rs  transaction.rs  update.rs
kstone-client/tests/: integration_test.rs
kstone-core/: Cargo.toml
kstone-core/src/: background.rs  block.rs  bloom.rs  compaction.rs  config.rs  error.rs  expression.rs  extent.rs  index.rs  iterator.rs  layout.rs  lib.rs  lsm.rs  manifest.rs  memory_lsm.rs  memory_sst.rs  memory_wal.rs  mmap.rs  retry.rs  sst.rs  sst_block.rs  stream.rs  types.rs  validation.rs  wal.rs  wal_ring.rs
kstone-core/src/partiql/: ast.rs  mod.rs  parser.rs  translator.rs  validator.rs
kstone-proto/: Cargo.toml  build.rs
kstone-proto/proto/: keystone.proto
kstone-proto/src/: lib.rs
kstone-server/: Cargo.toml
kstone-server/src/: connection.rs  convert.rs  lib.rs  metrics.rs  rate_limit.rs  service.rs
kstone-server/tests/: observability_test.rs
kstone-sync/: Cargo.toml
kstone-sync/src/: change_tracker.rs  conflict.rs  lib.rs  merkle.rs  metadata.rs  offline_queue.rs  protocol.rs  sync_engine.rs  vector_clock.rs
kstone-sync/src/protocol/: filesystem.rs  s3.rs
kstone-sync/tests/: s3_test.rs  sync_integration_test.rs
kstone-tests/: Cargo.toml
kstone-tests/benches/: database_bench.rs
kstone-tests/src/: lib.rs
kstone-tests/tests/: concurrent_access_test.rs  crash_recovery_test.rs  durability_test.rs  edge_cases_test.rs  error_handling_test.rs  integration_test.rs  large_dataset_test.rs  observability_test.rs  path_fix_test.rs  resource_management_test.rs  sync_test.rs  wal_corruption_test.rs
scripts/: bump-bindings-version.sh  publish-crates.sh  release.sh
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/.github/workflows/: deploy.yml
website/src/components/: DocsSidebar.astro  FeatureCard.astro  Footer.astro  Header.astro  Hero.astro  ThemeToggle.tsx
website/src/content/: config.ts
website/src/content/docs/: appendix-a.md  appendix-b.md  appendix-c.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-10.md  chapter-11.md  chapter-13.md  chapter-14.md  chapter-15.md  chapter-16.md  chapter-20.md  chapter-21.md  chapter-26.md  chapter-29.md  chapter-32.md  chapter-33.md  chapter-34.md  chapter-36.md  chapter-37.md  chapter-40.md  chapter-41.md
website/src/layouts/: BaseLayout.astro  DocsLayout.astro
website/src/pages/: api.astro  community.astro  docs.astro  download.astro  examples.astro  index.astro
website/src/pages/docs/: [...slug].astro
website/src/styles/: global.css
