[workspace]
members = [
    "kstone-core",
    "kstone-api",
    "kstone-cli",
    "kstone-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["KeystoneDB Contributors"]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
thiserror = "1.0"
bytes = { version = "1.5", features = ["serde"] }
parking_lot = "0.12"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }

# Crypto
crc32fast = "1.3"
crc32c = "0.6"
aes-gcm = "0.10"

# Compression
zstd = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }
comfy-table = "7.1"

# PartiQL / SQL parsing
sqlparser = "0.52"
base64 = "0.22"

# Testing
proptest = "1.4"
tempfile = "3.8"
