[workspace]
members = [
    "kstone-core",
    "kstone-api",
    "kstone-cli",
    "kstone-proto",
    "kstone-server",
    "kstone-client",
    "kstone-sync",
    "kstone-tests",
    "c-ffi",
    "examples/url-shortener",
    "examples/cache-server",
    "examples/todo-api",
    "examples/blog-engine",
]
exclude = [
    "bindings/python/embedded",
    "bindings/javascript/embedded",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["KeystoneDB Contributors"]
repository = "https://github.com/keystone-db/keystonedb"
homepage = "https://github.com/keystone-db/keystonedb"
documentation = "https://docs.rs/kstone-core"
keywords = ["database", "dynamodb", "key-value", "embedded", "nosql"]
categories = ["database", "database-implementations"]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
thiserror = "1.0"
bytes = { version = "1.5", features = ["serde"] }
parking_lot = "0.12"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }

# gRPC / Network
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Crypto
crc32fast = "1.3"
crc32c = "0.6"
aes-gcm = "0.10"

# Compression
zstd = "0.13"

# Validation
regex = "1.10"

# CLI
clap = { version = "4.4", features = ["derive"] }
comfy-table = "7.1"

# PartiQL / SQL parsing
sqlparser = "0.52"
base64 = "0.22"

# Testing
proptest = "1.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# Observability
prometheus = "0.13"
lazy_static = "1.4"
axum = "0.7"

# Rate Limiting
governor = "0.6"

# Examples dependencies
nanoid = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
