[package]
name = "kstone-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
kstone-core = { path = "../kstone-core" }
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
