[package]
name = "kstone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kstone"
path = "src/main.rs"

[dependencies]
kstone-api = { path = "../kstone-api" }
kstone-core = { path = "../kstone-core" }
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
rustyline = "14.0"
colored = "2.0"
dirs = "5.0"
