[package]
name = "kstone-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Protocol Buffers definitions for KeystoneDB gRPC API"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prost = "0.12"
tonic = "0.11"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
