[package]
name = "kstone-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "kstone-server"
path = "src/bin/kstone-server.rs"

[dependencies]
# Internal
kstone-api = { path = "../kstone-api" }
kstone-core = { path = "../kstone-core" }
kstone-proto = { path = "../kstone-proto" }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Async streams
futures = "0.3"

# Observability
prometheus = { workspace = true }
lazy_static = { workspace = true }
axum = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

# Rate Limiting
governor = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
