[package]
name = "kstone-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "kstone_test_utils"
path = "src/lib.rs"

[dependencies]
kstone-api = { path = "../kstone-api" }
kstone-core = { path = "../kstone-core" }
tempfile.workspace = true
anyhow.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "database_bench"
harness = false
