[package]
name = "kstone-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "kstone_test_utils"
path = "src/lib.rs"

[dependencies]
kstone-api = { path = "../kstone-api" }
kstone-core = { path = "../kstone-core" }
kstone-sync = { path = "../kstone-sync" }
tempfile.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "database_bench"
harness = false
