[package]
name = "cache-server"
version.workspace = true
edition.workspace = true

[dependencies]
kstone-api = { path = "../../kstone-api" }
kstone-core = { path = "../../kstone-core" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
