[package]
name = "url-shortener"
version.workspace = true
edition.workspace = true

[dependencies]
kstone-api = { path = "../../kstone-api" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nanoid.workspace = true
tower-http.workspace = true
